# gql-standalone

./: .gitignore  Dockerfile  Makefile  README.md  build.sh  pyproject copy.toml  pyproject.toml
domain/: pyproject.toml
domain/tests/: test_domain.py
gqlapi/: .gitignore  Dockerfile  Makefile  config.py  main.py
gqlapi/app/: __init__.py  permissions.py
gqlapi/endpoints/alima_account/: account.py  billing.py  stripe.py
gqlapi/endpoints/b2bcommerce/: ecommerce_user.py
gqlapi/endpoints/core/: category.py  invoice.py  orden.py  product.py
gqlapi/endpoints/restaurant/: restaurant_suppliers.py  restaurant_user.py
gqlapi/endpoints/retool/: data_orchestration.py
gqlapi/endpoints/services/: authos.py  image.py
gqlapi/endpoints/supplier/: supplier_business.py  supplier_price_list.py  supplier_product.py  supplier_restaurants.py  supplier_unit.py  supplier_user.py
gqlapi/endpoints/user/: firebase.py
gqlapi/gqlapi/: algolia.py  auth.py  main.py
gqlapi/gqlapi/repository/: __init__.py
gqlapi/gqlapi/utils/: automation.py  cx.py  helpers.py
gqlapi/handlers/alima_account/: account.py  billing.py
gqlapi/handlers/b2bcommerce/: ecommerce_seller.py  ecommerce_user.py
gqlapi/handlers/core/: category.py  invoice.py  orden.py  product.py
gqlapi/handlers/integrations/: integrations.py  scorpion.py
gqlapi/handlers/restaurant/: restaurant_branch.py  restaurant_business.py  restaurant_suppliers.py  restaurant_user.py
gqlapi/handlers/scripts/: data_orchestration.py
gqlapi/handlers/services/: image.py  mails.py
gqlapi/handlers/supplier/: supplier_business.py  supplier_invoice.py  supplier_price_list.py  supplier_product.py  supplier_restaurants.py  supplier_unit.py  supplier_user.py
gqlapi/handlers/user/: firebase.py
gqlapi/models/: preorden_optimizer.py
gqlapi/repository/alima_account/: account.py  billing.py
gqlapi/repository/b2bcommerce/: ecommerce_seller.py
gqlapi/repository/core/: category.py  invoice.py  orden.py  product.py
gqlapi/repository/restaurant/: restaurant_branch.py
gqlapi/repository/scripts/: scripts_execution.py
gqlapi/repository/services/: authos.py  image.py
gqlapi/utils/: batch_files.py  cart.py  cx.py  notifications.py
lib/application/: pyproject.toml
lib/application/application/: request.py
lib/clients/: pyproject.toml
lib/clients/clients/cloudinaryapi/: cloudinary.py
lib/clients/clients/email_api/: mails.py
lib/clients/clients/facturamaapi/: facturama.py
lib/clients/clients/godaddyapi/: godaddy.py
lib/clients/clients/pricing/: pricing_client.py
lib/clients/clients/stripeapi/: stripe_api.py
lib/environ/: pyproject.toml
lib/future/: pyproject.toml
lib/integrations/: pyproject.toml
lib/logger/: pyproject.toml
lib/metrics/: pyproject.toml
lib/postgres/: pyproject.toml
lib/postgres/postgres/: connection.py
tests/integration/: config.py
tools/: build.sh  setup.sh
(+198 files in other folders)
