[tool.poetry]
name = "monorepo"
version = "1.2.0"
description = "Alima's monorepo"
authors = ["rogamba", "jorgeviz"]

[tool.poetry.dependencies]
python = "^3.10"
starlette = "^0.26.1"
uvicorn = "^0.21.1"
requests = "^2.28.2"
sqlalchemy = "~1.4.42"
databases = "^0.7.0"
nest-asyncio = "^1.5.6"
pandas = "^2.0.0"
flake8 = "^6.0.0"
pytest = "^7.2.2"
logger = {path = "lib/logger", develop = true}
metrics = {path = "lib/metrics", develop = true}
future = {path = "lib/future", develop = true}
environ = {path = "lib/environ", develop = true}
application = {path = "lib/application", develop = true}
postgres = {path = "lib/postgres", develop = true}
clients = {path = "lib/clients", develop = true}
domain = {path = "domain", develop = true}
fuzzywuzzy = "^0.18.0"

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
autopep8 = "^2.0.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
