[tool.poetry]
name = "application"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
starlette = "^0.26.1"
uvicorn = "^0.21.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
metrics = {path = "../metrics", develop = true}
logger = {path = "../logger", develop = true}
future = {path = "../future", develop = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
