[tool.poetry]
name = "clients"
version = "0.1.0"
description = ""
authors = ["jorgeviz"]

[tool.poetry.dependencies]
python = "^3.10"
firebase-admin = "^6.1.0"
sendgrid = "^6.10.0"
stripe = "^5.4.0"

[tool.poetry.dev-dependencies]
logger = {path = "../logger", develop = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
