[tool.poetry]
name = "integrations"
version = "0.1.0"
description = ""
authors = ["ferreyes"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
logger = {path = "../logger", develop = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
