[tool.poetry]
name = "postgres"
version = "0.1.0"
description = ""
authors = ["rogamba", "jorgeviz"]

[tool.poetry.dependencies]
python = "^3.10"
sqlalchemy = "~1.4.42"
databases = "^0.7.0"
psycopg2-binary = "^2.9.6"
asyncpg = "^0.27.0"
nest-asyncio = "^1.5.6"

[tool.poetry.dev-dependencies]
environ = {path = "../../lib/environ", develop = true}
future = {path = "../../lib/future", develop = true}

[build-system]
requires = [
    "poetry-core>=1.0.0",
    "environ",
    "future"
]
build-backend = "poetry.core.masonry.api"
